# TiddlyParse

./: .gitignore  README.rst  dodo.py  pyproject.toml
tests/: test_tiddlyparse.py
tests/fixtures/: empty-5.2.0.html
tiddlyparse/: parser.py
