[tool.poetry]
name = "TiddlyParse"
version = "0.1.0"
description = ""
authors = ["Patrice Neff <mail@patrice.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
types-beautifulsoup4 = "^4.9.0"
flake8 = "^3.9.2"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
