[tool.poetry]
name = "TiddlyParse"
version = "0.1.0"
description = ""
authors = ["Patrice Neff <mail@patrice.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
types-beautifulsoup4 = "^4.9.0"
flake8 = "^3.9.2"
isort = "^5.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
types-beautifulsoup4 = "^4.12.0.7"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
